<?xml version="1.0" encoding="UTF-8"?>

<project
    xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="
        http://maven.apache.org/POM/4.0.0
        https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <!-- =====================================================
         SPRING BOOT PARENT
         ===================================================== -->

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.1.0</version>
        <relativePath/>
    </parent>

    <!-- =====================================================
         PROJECT INFORMATION
         ===================================================== -->

    <groupId>fullstack</groupId>
    <artifactId>fullstack</artifactId>
    <version>0.0.1-SNAPSHOT</version>

    <name>fullstack</name>

    <description>
        Spring Boot React Project Task Manager
    </description>

    <!-- =====================================================
         PROPERTIES
         ===================================================== -->

    <properties>

        <!-- Java version used by Spring Boot and Maven -->
        <java.version>21</java.version>

        <!-- JSON Web Token library version -->
        <jjwt.version>0.13.0</jjwt.version>

    </properties>

    <!-- =====================================================
         DEPENDENCIES
         ===================================================== -->

    <dependencies>

        <!-- =================================================
             WEB
             REST controllers, embedded Tomcat, JSON support
             ================================================= -->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>


        <!-- =================================================
             JPA
             Spring Data JPA + Hibernate
             ================================================= -->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>


        <!-- =================================================
             VALIDATION
             Jakarta Bean Validation
             ================================================= -->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>


        <!-- =================================================
             SPRING SECURITY
             Authentication and authorization
             ================================================= -->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>


        <!-- =================================================
             JWT
             JSON Web Token support
             ================================================= -->

        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-api</artifactId>
            <version>${jjwt.version}</version>
        </dependency>

        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-impl</artifactId>
            <version>${jjwt.version}</version>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt-jackson</artifactId>
            <version>${jjwt.version}</version>
            <scope>runtime</scope>
        </dependency>


        <!-- =================================================
             SQL SERVER
             Microsoft SQL Server JDBC driver
             ================================================= -->

        <dependency>
            <groupId>com.microsoft.sqlserver</groupId>
            <artifactId>mssql-jdbc</artifactId>
            <scope>runtime</scope>
        </dependency>


        <!-- =================================================
             FLYWAY DATABASE MIGRATIONS

             Flyway manages version-controlled database
             schema changes.

             flyway-core:
             Core Flyway migration engine.

             flyway-database-sqlserver:
             Adds Microsoft SQL Server support.
             ================================================= -->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-flyway</artifactId>
        </dependency>
        
        <dependency>
           <groupId>org.flywaydb</groupId>
           <artifactId>flyway-sqlserver</artifactId>
       </dependency>

        <!-- =================================================
             H2 TEST DATABASE

             Used only while running automated tests so tests
             do not depend on the local SQL Server instance.
             ================================================= -->

        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>test</scope>
        </dependency>


        <!-- =================================================
             DEVTOOLS
             Development-time automatic restart support
             ================================================= -->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>


        <!-- =================================================
             TESTING

             spring-boot-starter-test supplies the core
             Spring Boot testing stack including JUnit 5,
             Mockito, AssertJ, Spring Test, and related
             testing utilities.
             ================================================= -->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>


        <!-- =================================================
             SPRING MVC TESTING

             Provides MVC-specific test support.
             ================================================= -->

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-webmvc-test</artifactId>
            <scope>test</scope>
        </dependency>


        <!-- =================================================
             JUNIT 5

             Explicitly included for service unit tests.
             ================================================= -->

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>


        <!-- =================================================
             MOCKITO CORE

             Used for:
             @Mock
             when(...)
             verify(...)
             ArgumentCaptor
             ================================================= -->

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <scope>test</scope>
        </dependency>


        <!-- =================================================
             MOCKITO + JUNIT 5 INTEGRATION

             Provides:
             @ExtendWith(MockitoExtension.class)
             ================================================= -->

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>


        <!-- =================================================
             ASSERTJ

             Fluent assertions for automated tests.
             ================================================= -->

        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>


        <!-- =================================================
             SPRING SECURITY TESTING

             Used by controller/security integration tests.
             ================================================= -->

        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>


    <!-- =====================================================
         BUILD
         ===================================================== -->

    <build>

        <plugins>

            <!-- =================================================
                 SPRING BOOT MAVEN PLUGIN

                 Creates the executable Spring Boot JAR.
                 ================================================= -->

            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
            </plugin>


            <!-- =================================================
                 MAVEN SUREFIRE

                 Runs JUnit tests during:

                 .\mvnw test
                 ================================================= -->

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>

        </plugins>

    </build>

</project>